# gftp

./: .gitignore  AUTHORS  ChangeLog  ChangeLog-old  LICENSE  MAINTAINERS  Makefile.am  Makefile.in  README  README.md  THANKS  TODO  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  cvsclean  gftp.doap  gftp.spec  gftp.spec.in  meson.build  meson_options.txt  zrelease
debian/: changelog  control  copyright  docs  gftp-common.dirs  gftp-common.docs  gftp-common.install  gftp-gtk.install  gftp-gtk.links  gftp-gtk.menu  gftp-text.install  gftp-text.links  gftp-text.postinst  gftp-text.prerm  menu  rules  watch
docs/: Makefile.am  Makefile.in  README.keylog  USERS-GUIDE  create_portable_gftp.sh  gftp-faq.sgml  gftp.1  gftp.desktop  gftp.lsm  gftp.xml  meson.build  parse-netrc.pl
docs/figures/: mainwin.xcf
docs/rfcs/: draft-murray-auth-ftp-ssl-09.txt  rfc959.txt
docs/sample.gftp/: Makefile.am  Makefile.in  bookmarks  connect.xpm  deb.xpm  diff.xpm  dir.xpm  doc.xpm  dotdot.xpm  down.xpm  exe.xpm  gftp-logo.xpm  gftp.xpm  gftprc  img.xpm  left.xpm  linkdir.xpm  linkfile.xpm  man.xpm  open_dir.xpm  right.xpm  rpm.xpm  sound.xpm  stop.xpm  tar.xpm  txt.xpm  up.xpm  world.xpm
docs/website/: announce.txt  faq.html  generate-gftp-website.pl  index.html.in  install.html  robots.txt  screenshots.html  update-gftp-cvs.sh
icons/: Makefile.am  meson.build
lib/: Makefile.am  Makefile.in  bookmark.c  cache.c  charset-conv.c  config_file.c  fsp.c  fsplib.c  fsplib.h  ftp-dir-listing.c  ftpcommon.h  ftps.c  gftp.h  glib-compat.h  httpcommon.h  https.c  local.c  meson.build  misc.c  mkstemps.c  options.h  parse-dir-listing.c  protocol_bookmark.c  protocol_fsp.c  protocol_ftp.c  protocol_ftp.h  protocol_ftps.c  protocol_http.c  protocol_http.h  protocol_https.c  protocol_localfs.c  protocols.c  protocols_bookmark.c  pty.c  rfc2068.c  rfc959.c  socket-connect-getaddrinfo.c  socket-connect-gethostbyname.c  socket-connect.c  sockutils.c  (+3 more)
lib/fsplib/: COPYING  Makefile.am  fsplib.c  fsplib.h  lock.c  lock.h
m4/: Makefile.am  largefile.m4
po/: ChangeLog  LINGUAS  Makefile.in  Makefile.in.gen  Makefile.in.in  Makevars  POTFILES.in  am.po  ar.po  as.po  az.po  be.po  bg.gmo  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.gmo  es.po  eu.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.po  gftp.pot  gl.po  (+59 more)
src/: Makefile.am  Makefile.in  gftp.in  gtkcompat.h  meson.build
src/gtk/: Makefile.am  Makefile.in  bookmarks.c  bookmarks_edit_entry.c  chmod_dialog.c  delete_dialog.c  dnd.c  gftp-gtk-mac-init.c  gftp-gtk.c  gftp-gtk.h  gtkcompat.c  gtkcompat.h  gtkui.c  gtkui_transfer.c  listbox.c  menu-items.c  meson.build  misc-gtk.c  mkdir_dialog.c  options_dialog.c  options_dialog_localhosts.c  platform_specific.c  port.h  rename_dialog.c  transfer.c  view_dialog.c
src/text/: Makefile.am  Makefile.in  gftp-text.c  gftp-text.h  meson.build  textui.c
src/uicommon/: Makefile.am  gftpui.c  gftpui.h  gftpuicallbacks.c  meson.build
