## Process this file with automake to produce Makefile.in

man_MANS=gftp.1
SUBDIRS=sample.gftp

EXTRA_DIST=USERS-GUIDE gftp.1 gftp.desktop gftp.png parse-netrc.pl

gftpdocdir = ${docdir}
gftpdoc_DATA = ../README ../COPYING ../AUTHORS USERS-GUIDE

Utilitiesdir = $(datadir)/applications
Utilities_DATA = gftp.desktop

Iconsdir = $(datadir)/pixmaps
Icons_DATA = gftp.png
