## Process this file with automake to produce Makefile.in

man_MANS=gftp.1
SUBDIRS=sample.gftp

EXTRA_DIST=USERS-GUIDE gftp.1 gftp.desktop

gftpdocdir = ${docdir}
gftpdoc_DATA = ../README.md ../COPYING ../AUTHORS USERS-GUIDE ../ChangeLog

Utilitiesdir = $(datadir)/applications
Utilities_DATA = gftp.desktop

