install_man('gftp.1')

install_data(
    'gftp.desktop',
    install_dir: get_option('datadir') / 'applications'
)

install_data(
    [
        '../README.md',
        '../LICENSE',
        '../AUTHORS',
        'USERS-GUIDE',
        '../ChangeLog'
    ],
    install_dir: get_option('datadir') / 'doc'
)

install_data(
    [
        'sample.gftp/bookmarks',
        'sample.gftp/deb.xpm',
        'sample.gftp/diff.xpm',
        'sample.gftp/dir.xpm',
        'sample.gftp/doc.xpm',
        'sample.gftp/dotdot.xpm',
        'sample.gftp/exe.xpm',
        'sample.gftp/gftp-logo.xpm',
        'sample.gftp/gftprc',
        'sample.gftp/img.xpm',
        'sample.gftp/linkdir.xpm',
        'sample.gftp/linkfile.xpm',
        'sample.gftp/man.xpm',
        'sample.gftp/open_dir.xpm',
        'sample.gftp/rpm.xpm',
        'sample.gftp/tar.xpm',
        'sample.gftp/txt.xpm',
        'sample.gftp/sound.xpm',
        'sample.gftp/world.xpm'
    ],
    install_dir: get_option('datadir') / 'gftp'
)