
icon1dir = $(datadir)/icons/hicolor/16x16/apps
icon1_DATA = 16x16/gftp.png

icon2dir = $(datadir)/icons/hicolor/22x22/apps
icon2_DATA = 22x22/gftp.png

icon3dir = $(datadir)/icons/hicolor/32x32/apps
icon3_DATA = 32x32/gftp.png

icon4dir = $(datadir)/icons/hicolor/48x48/apps
icon4_DATA = 48x48/gftp.png

icon5dir = $(datadir)/icons/hicolor/scalable/apps
icon5_DATA = scalable/gftp.svg

icon7dir = $(datadir)/gftp
icon7_DATA = 48x48/gftp.png

EXTRA_DIST = $(icon1_DATA) $(icon2_DATA) $(icon3_DATA) \
             $(icon4_DATA) $(icon5_DATA) $(icon7_DATA)
