## Process this file with automake to produce Makefile.in

pkgdata_DATA=bookmarks \
	deb.xpm \
	diff.xpm \
	dir.xpm \
	doc.xpm \
	dotdot.xpm \
	exe.xpm \
	gftp-logo.xpm \
	gftprc \
	img.xpm \
	linkdir.xpm \
	linkfile.xpm \
	man.xpm \
	open_dir.xpm \
	rpm.xpm \
	tar.xpm \
	txt.xpm \
	sound.xpm \
	world.xpm

EXTRA_DIST=bookmarks \
	deb.xpm \
	diff.xpm \
	dir.xpm \
	doc.xpm \
	dotdot.xpm \
	exe.xpm \
	gftp-logo.xpm \
	gftprc \
	img.xpm \
	linkdir.xpm \
	linkfile.xpm \
	man.xpm \
	open_dir.xpm \
	rpm.xpm \
	tar.xpm \
	txt.xpm \
	sound.xpm \
	world.xpm
