## Process this file with automake to produce Makefile.in

files = bookmarks \
	deb.png \
	diff.png \
	dir.png \
	doc.png \
	dotdot.png \
	exe.png \
	gftp-logo.png \
	gftprc \
	img.png \
	linkdir.png \
	linkfile.png \
	man.png \
	open_dir.png \
	rpm.png \
	tar.png \
	txt.png \
	sound.png \
	world.png

pkgdata_DATA = $(files)

EXTRA_DIST = $(files)

